@@ -12,6 +12,7 @@ Enhancements::
 * allow footnotes to be placed directly below last block of content if `footnotes_margin_top` theme key is 0 (#2291)
 * insert column break instead of page break in multi-column layout if `column` role is specified on page break macro (#2293)
 * allow page / column break to be forced using `always` option (e.g., `[%always]`) (#2300)
+* use relative font size for big and small roles (#2307)
 
 Bug Fixes::
 
